# tim-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml
brain/: RTmain.py  alt_realtime_main.py  audio_transcription.py  blip_imgs.py  comms.py  fast_speak.py  img_transcription.py  listen.py  main.py  pi_cam.py  requirements.txt  serial.py  speak.py  test.py  tools.py  transcription.py  unused_audio.py  webcomms.py
brain/startup/: install_startup.sh  tim-bot.desktop  tim-bot.service
esp/main/: MAYBE_newmain.ino  camera.cpp  camera.h  command_based_main.ino  main.ino  requests.cpp  requests.h
esp/test-pins/main/: main.ino
esp/test_camera/: test_camera.ino
ros/: .gitignore  README.md  mapping.py  package.xml  requirements.txt  setup.cfg  setup.py  start_all_nodes.sh
ros-nodes/: brainNode.py  cameraNode.py  earNode.py  gpt.py  main.py  motorNode.py  speechNode.py
ros/launch/: tim_bot.launch.py
ros/resource/: ros_nodes
ros/ros_nodes/: __init__.py  brain_node.py  camera_node.py  ear_node.py  gpt.py  motor_node.py  serial_helpers.py  speech_helpers.py  speech_node.py
