<?xml version="1.0"?>
<package format="3">
  <name>ros_nodes</name>
  <version>0.0.1</version>
  <description>ROS 2 nodes for Tim bot.</description>
  <maintainer email="check_my_github@example.com">Bowman Edebohls</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
